# neural-network

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  TODO.md
include/: layer.h  neuron.h
src/: layer.cpp  main.cpp  neuron.cpp
tests/: layer_test.cpp  neuron_test.cpp
